# scommit

./: .gitignore  Cargo.toml  README.md  WORKLOG.md
src/: main.rs
